	  in a group on the buddy list. (Paul Aurich)
	* Removed the unmaintained and unneeded toc protocol plugin.
	* Fixed NTLM authentication on big-endian systems.

	libpurple:
	* Various memory cleanups when unloading libpurple. (Nick Hebner)
	* Report idle time 'From last message sent' should work properly.
	* Show the invite message for buddies that requested authorization
	  from you on MSN.

	XMPP:
	* Voice & Video support with Jingle (XEP-0166, 0167, 0176, & 0177), and
	  voice support with GTalk and GMail. (Mike "Maiku" Ruprecht)
	* Support for in-band bytestreams for file transfers (XEP-0047). (Marcus
	  Lundblad)
	* Support for sending and receiving attentions (equivalent to "buzz"
	  and "nudge") using the command /buzz. (XEP-0224)
	* Support for connecting using BOSH. (Tobias Markmann)
	* A buddy's local time is displayed in the Get Info dialog if the remote
	  client supports it.
	* The set_chat_topic function can unset the chat topic.
	* The Ad-Hoc commands associated with our server are now always shown at
	  login.
	* Support showing and reporting idle times in the buddy list. (XEP-0256)
	* Support most recent version of User Avatar. (XEP-0084 v1.1)
	* Updated Entity Capabilities support. (Tobias Markmann)
	* Better support for receiving remote users' nicknames.
	* /affiliate and /role will now list the room members with the specified
	  affiliation/role if possible. (Andrei Mozzhuhin)
	* Put section breaks between resources in "Get Info" to improve readability.
	* XHTML markup is only included in outgoing messages when the message
	  contains formatting.
	* Show when the user was last logged in when doing "Get Info" on an offline
	  buddy, provided the server supports it.
	* Support custom smileys in MUCs (only when all participants support the
	  "Bits of Binary" extension, and a maximum of 10 participants are in the
	  chat to avoid getting too many fetch requests).

	Yahoo:
	* P2P file transfers. (Sulabh Mahajan)